--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
     "react": "^15.5.4",
+    "react-addons-css-transition-group": "^15.6.0",
     "react-dom": "^15.5.4",
-    "react-router-dom": "^4.1.1"
+    "react-image-carousel": "^1.0.17",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
+    "react-sticky-el": "^1.0.10",
+    "react-transition-group": "^1.2.0"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
