--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "axios": "^0.16.2",
     "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.6.0",
+    "react-addons-shallow-compare": "^15.6.0",
+    "react-dates": "^12.2.4",
     "react-dom": "^15.5.4",
     "react-image-carousel": "^1.0.17",
     "react-router": "^4.1.1",
