--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "loaders.css": "^0.1.2",
     "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.6.0",
     "react-addons-shallow-compare": "^15.6.0",
     "react-dates": "^12.2.4",
     "react-dom": "^15.5.4",
     "react-image-carousel": "^1.0.17",
+    "react-loaders": "^2.5.0",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-sticky-el": "^1.0.10",
