--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "jquery": "^3.2.1",
     "loaders.css": "^0.1.2",
     "react": "^15.5.4",
     "react-addons-css-transition-group": "^15.6.0",
